add tourist spots and fixed bug with images not being loaded

--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
         </div>
     </nav>
     <header>
-
+        <!--Hero pic over Stockholm-->
+        <section id="hero">
+            <div id="cover-box">
+                Welcome to Stockholm!
+            </div>
+        </section>
     </header>
     <main>
         <div id="content"></div>
