add spots in cards and a js generate card function that generate different card depending on screen size

--- a/index.html
+++ b/index.html
@@ -43,12 +43,17 @@
         <!--Hero pic over Stockholm-->
         <section id="hero">
             <div id="cover-box">
-                Welcome to Stockholm!
+                <h1>Welcome to explore Stockholm!</h1>
             </div>
         </section>
+        <div id="filter">
+
+        </div>
     </header>
     <main>
-        <div id="content"></div>
+        <div id="content" class="container section">
+
+        </div>
     </main>
     <footer id="footer" class="mt-auto footer">
         <div class="container section">
