add filter section in HTML (non working atm)

--- a/index.html
+++ b/index.html
@@ -46,7 +46,30 @@
                 <h1>Welcome to explore Stockholm!</h1>
             </div>
         </section>
-        <div id="filter">
+        <div id="filter" class="text-center">
+            <p>Filter: </p>
+            <div class="form-check form-check-inline form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
+                <label class="form-check-label" for="switchCheckDefault">Parks</label>
+            </div>
+            <div class="form-check form-check-inline form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
+                <label class="form-check-label" for="switchCheckDefault">Museums</label>
+            </div>
+            <div class="form-check form-check-inline form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
+                <label class="form-check-label" for="switchCheckDefault">Indoor</label>
+            </div>
+            <div class="form-check form-check-inline form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
+                <label class="form-check-label" for="switchCheckDefault">Family friendly</label>
+            </div>
+            <div class="form-check form-check-inline form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
+                <label class="form-check-label" for="switchCheckDefault">Free entry</label>
+            </div>
+            <p>Apply filter or scroll down to see all results</p>
+            <i class="fa-solid fa-angles-down"></i>
 
         </div>
     </header>
