--- a/index.html
+++ b/index.html
@@ -47,26 +47,29 @@
             </div>
         </section>
         <div id="filter" class="text-center">
-            <p>Filter: </p>
             <div class="form-check form-check-inline form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
-                <label class="form-check-label" for="switchCheckDefault">Parks</label>
+                <input class="form-check-input" type="checkbox" role="switch" id="parks">
+                <label class="form-check-label" for="parks">Parks</label>
             </div>
             <div class="form-check form-check-inline form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
-                <label class="form-check-label" for="switchCheckDefault">Museums</label>
+                <input class="form-check-input" type="checkbox" role="switch" id="museums">
+                <label class="form-check-label" for="museums">Museums</label>
             </div>
             <div class="form-check form-check-inline form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
-                <label class="form-check-label" for="switchCheckDefault">Indoor</label>
+                <input class="form-check-input" type="checkbox" role="switch" id="indoor">
+                <label class="form-check-label" for="indoor">Indoor</label>
             </div>
             <div class="form-check form-check-inline form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
-                <label class="form-check-label" for="switchCheckDefault">Family friendly</label>
+                <input class="form-check-input" type="checkbox" role="switch" id="outdoor">
+                <label class="form-check-label" for="outdoor">Outdoor</label>
             </div>
             <div class="form-check form-check-inline form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
-                <label class="form-check-label" for="switchCheckDefault">Free entry</label>
+                <input class="form-check-input" type="checkbox" role="switch" id="familyFriendly">
+                <label class="form-check-label" for="familyFriendly">Family friendly</label>
+            </div>
+            <div class="form-check form-check-inline form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="free">
+                <label class="form-check-label" for="free">Free entry</label>
             </div>
             <p>Apply filter or scroll down to see all results</p>
             <i class="fa-solid fa-angles-down"></i>
