add weather div and toogle function between weather and spots

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
           </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <li id="spotsBtn" class="nav-item">
+                        <button class="nav-link" aria-current="page">Spots</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Weather</a>
+                    <li id="weatherBtn" class="nav-item">
+                        <button class="nav-link">Weather</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Public Transport</a>
+                    <li id="transportBtn" class="nav-item">
+                        <button class="nav-link">Public Transport</a>
                     </li>
                 </ul>
             </div>
@@ -80,10 +80,14 @@
         <div id="content" class="container section">
 
         </div>
+        <div id="weather" class="container section hide text-center">
+            <h1>Weather in Stockholm</h1>
+            <p>Temp: 5 c </p>
+        </div>
     </main>
     <footer id="footer" class="mt-auto footer">
         <div class="container section">
-
+            <p>Created by Patrik, Milestone 2 2025</p>
         </div>
     </footer>
     <!--Load FontAwesome kit-->
