--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
                     <li id="spotsBtn" class="nav-item">
-                        <button class="nav-link" aria-current="page">Spots</a>
+                        <button class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-current="page">Spots</a>
                     </li>
                     <li id="weatherBtn" class="nav-item">
-                        <button class="nav-link">Weather</a>
+                        <button class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">Weather</a>
                     </li>
                     <li id="transportBtn" class="nav-item">
-                        <button class="nav-link">Public Transport</a>
+                        <button class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">Public Transport</a>
                     </li>
                 </ul>
             </div>
