add wind and round value to nearest whole number

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
             <div id="currentWeather">
                 <div id="currentSymbol"><i class="fa-solid fa-sun"></i></div>
                 <p id="currentText"></p>
-                <p id="tempC">Temperature: <span id="tempCdata"></span> °C </p>
+                <p id="CurrentTemp">Temperature: <span id="currentTempData"></span> °C </p>
+                <p id="currentWind">Wind: <span id="currentWindData"></span> m/s</p>
             </div>
         </div>
     </main>
