add precipitation on one week forecast and change style so no visible cards

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <h1>Welcome to explore Stockholm!</h1>
             </div>
         </section>
+        <!--Filter for the tourist spots using Bootstrap v5.3 switch input, updates live instead of apply button. Filter is hidden if showing weather-->
         <div id="filter" class="text-center">
             <div class="form-check form-check-inline form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="parks">
@@ -77,9 +78,11 @@
         </div>
     </header>
     <main>
+        <!--Content section where the spots gets loaded-->
         <div id="content" class="container section">
 
         </div>
+        <!--Weather section, hidden by default, toggle with navbar Weather button-->
         <div id="weather" class="container section hide text-center">
             <h1>Weather in Stockholm</h1>
             <h2>Current weather</h2>
@@ -92,27 +95,31 @@
                 <p id="currentPrecipitation">Precipitation: <span id="currentPrecipitationData"></span> mm</p>
                 <p id="currentDate">Updated: <span id="currentDateData"></span></p>
             </div>
-            <div id="hourly" class="hide">
-
+            <!--Hourly forecast, hidden by default toggle with show hourly button-->
+            <div id="hourly">
+                <button id="hourlyBtn">Show hourly forecast 48h <i class="fa-solid fa-angle-down"></i></button>
+                        <div id="hourlyForecast" class="hide"></div>
             </div>
-            <div id="weekly" class="row">
+            <!--One week forecast, shows by default -->
+            <div id="weekly">
                 <h2>One week forecast</h2>
-                <div id="weeklyCards"></div>
+                <div id="weeklyCards" class="row text-center"></div>
             </div>
         </div>
-    </main>
-    <footer id="footer" class="mt-auto footer">
-        <div class="container section">
-            <p>Created by Patrik, Milestone 2 2025</p>
-        </div>
-    </footer>
-    <!--Load FontAwesome kit-->
-    <script src="https://kit.fontawesome.com/ba33d00b7b.js" crossorigin="anonymous"></script>
-    <!--Bootstrap v5.3 JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous">
-    </script>
-    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-    <script src="assets/js/script.js"></script>
+        </main>
+        <!--Footer section-->
+        <footer id="footer" class="mt-auto footer">
+            <div class="container section">
+                <p>Created by Patrik, Milestone 2 2025</p>
+            </div>
+        </footer>
+        <!--Load FontAwesome kit-->
+        <script src="https://kit.fontawesome.com/ba33d00b7b.js" crossorigin="anonymous"></script>
+        <!--Bootstrap v5.3 JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous">
+        </script>
+        <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+        <script src="assets/js/script.js"></script>
 </body>
 
 </html>
