add text today on first card of week forecast and add credit for weather data at bottom of page

--- a/index.html
+++ b/index.html
@@ -97,14 +97,15 @@
             </div>
             <!--Hourly forecast, hidden by default toggle with show hourly button-->
             <div id="hourly">
-                <button id="hourlyBtn">Show hourly forecast 48h <i class="fa-solid fa-angle-down"></i></button>
+                <button id="hourlyBtn" class="hide">Show hourly forecast 48h <i class="fa-solid fa-angle-down"></i></button>
                         <div id="hourlyForecast" class="hide"></div>
             </div>
             <!--One week forecast, shows by default -->
             <div id="weekly">
-                <h2>One week forecast</h2>
+                <h2>7 day forecast</h2>
                 <div id="weeklyCards" class="row text-center"></div>
             </div>
+            <p id="weatherSource">Weather data provided by open-meteo.com</p>
         </div>
         </main>
         <!--Footer section-->
