add style to map so fit screen and add map on card for bigger screens

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
         </main>
         <!--Footer section-->
         <footer id="footer" class="mt-auto footer">
-            <div class="container section">
-                <p>Created by Patrik, Milestone 2 2025</p>
+            <div class="container section text-center">
+                <p>Created by PL for Milestone 2 2025</p>
             </div>
         </footer>
         <!--Load FontAwesome kit-->
