add hourly 48h forecast that is hidden, toggle button added

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
             <!--Hourly forecast, hidden by default toggle with show hourly button-->
             <div id="hourly">
-                <button id="hourlyBtn" class="hide">Show hourly forecast 48h <i class="fa-solid fa-angle-down"></i></button>
+                <button id="hourlyBtn">Show hourly 48h forecast <i class="fa-solid fa-angle-down"></i></button>
                         <div id="hourlyForecast" class="hide"></div>
             </div>
             <!--One week forecast, shows by default -->
