add some comments in code and general clean up

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h1>Welcome to explore Stockholm!</h1>
             </div>
         </section>
-        <!--Filter for the tourist spots using Bootstrap v5.3 switch input, updates live instead of apply button. Filter is hidden if showing weather-->
+        <!--Filter for the tourist spots using Bootstrap v5.3 switch input, updates live with function instead of apply button. Filter is hidden if showing weather-->
         <div id="filter" class="text-center">
             <div class="form-check form-check-inline form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="parks">
@@ -75,7 +75,7 @@
         </div>
     </header>
     <main>
-        <!--Content section where the spots gets loaded-->
+        <!--Content section where the spots/places gets loaded-->
         <div id="content" class="container section">
 
         </div>
