--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
                     <li id="spotsBtn" class="nav-item">
-                        <button class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-current="page">Places</a>
+                        <button class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-current="page" aria-label="Button to return to tourist places">Places</a>
                     </li>
                     <li id="weatherBtn" class="nav-item">
-                        <button class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">Weather</a>
+                        <button class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-label="Button to show weather in Stockholm">Weather</a>
                     </li>
                 </ul>
             </div>
@@ -47,27 +47,27 @@
         <div id="filter" class="text-center">
             <div class="form-check form-check-inline form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="parks">
-                <label class="form-check-label" for="parks">Parks</label>
+                <label class="form-check-label" for="parks" aria-label="Filter for category parks">Parks</label>
             </div>
             <div class="form-check form-check-inline form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="museums">
-                <label class="form-check-label" for="museums">Museums</label>
+                <label class="form-check-label" for="museums" aria-label="Filter for category museums">Museums</label>
             </div>
             <div class="form-check form-check-inline form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="indoor">
-                <label class="form-check-label" for="indoor">Indoor</label>
+                <label class="form-check-label" for="indoor" aria-label="Filter for activity type indoor">Indoor</label>
             </div>
             <div class="form-check form-check-inline form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="outdoor">
-                <label class="form-check-label" for="outdoor">Outdoor</label>
+                <label class="form-check-label" for="outdoor" aria-label="Filter for activity type outdoor">Outdoor</label>
             </div>
             <div class="form-check form-check-inline form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="familyFriendly">
-                <label class="form-check-label" for="familyFriendly">Family friendly</label>
+                <label class="form-check-label" for="familyFriendly" aria-label="Filter for activity type family friendly">Family friendly</label>
             </div>
             <div class="form-check form-check-inline form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="free">
-                <label class="form-check-label" for="free">Free entry</label>
+                <label class="form-check-label" for="free" aria-label="Filter for activity with free entry">Free entry</label>
             </div>
             <p>Apply filter or scroll down to see all results</p>
             <i class="fa-solid fa-angles-down"></i>
@@ -108,7 +108,7 @@
         <!--Footer section-->
         <footer id="footer" class="mt-auto footer">
             <div class="container section text-center">
-                <p>Created by PL for Milestone 2 2025</p>
+                <p>Created by PL for Milestone 2 2025 | <a href="#hero" aria-label="Link back up to filters and top of the page">Back to top/filters<i class="fa-solid fa-angles-up"></i></a></p>
             </div>
         </footer>
         <!--Load FontAwesome kit-->
