change text in footer so fits in one row on mobile

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <!--Footer section-->
         <footer id="footer" class="mt-auto footer">
             <div class="container section text-center">
-                <p>Created by PL for Milestone 2 2025 | <a href="#hero" aria-label="Link back up to filters and top of the page">Back to top/filters<i class="fa-solid fa-angles-up"></i></a></p>
+                <p>Created by PL | <a href="#hero" aria-label="Link back up to filters and top of the page">Back to top/filters<i class="fa-solid fa-angles-up"></i></a></p>
             </div>
         </footer>
         <!--Load FontAwesome kit-->
