--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
                     <li id="spotsBtn" class="nav-item">
-                        <button class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-current="page" aria-label="Button to return to tourist places">Places</a>
+                        <button class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-current="page" aria-label="Button to return to tourist places">Places</button>
                     </li>
                     <li id="weatherBtn" class="nav-item">
-                        <button class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-label="Button to show weather in Stockholm">Weather</a>
+                        <button class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-label="Button to show weather in Stockholm">Weather</button>
                     </li>
                 </ul>
             </div>
@@ -95,7 +95,7 @@
             <!--Hourly forecast, hidden by default toggle with show hourly button-->
             <div id="hourly">
                 <button id="hourlyBtn">Show hourly 24h forecast <i class="fa-solid fa-angle-down"></i></button>
-                        <div id="hourlyForecast" class="hide"></div>
+                <div id="hourlyForecast" class="hide"></div>
             </div>
             <!--One week forecast, shows by default -->
             <div id="weekly">
@@ -104,20 +104,20 @@
             </div>
             <p id="weatherSource">Weather data provided by open-meteo.com</p>
         </div>
-        </main>
-        <!--Footer section-->
-        <footer id="footer" class="mt-auto footer">
-            <div class="container section text-center">
-                <p>Created by PL | <a href="#hero" aria-label="Link back up to filters and top of the page">Back to top/filters<i class="fa-solid fa-angles-up"></i></a></p>
-            </div>
-        </footer>
-        <!--Load FontAwesome kit-->
-        <script src="https://kit.fontawesome.com/ba33d00b7b.js" crossorigin="anonymous"></script>
-        <!--Bootstrap v5.3 JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous">
-        </script>
-        <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-        <script src="assets/js/script.js"></script>
+    </main>
+    <!--Footer section-->
+    <footer id="footer" class="mt-auto footer">
+        <div class="container section text-center">
+            <p>Created by PL | <a href="#hero" aria-label="Link back up to filters and top of the page">Back to top/filters<i class="fa-solid fa-angles-up"></i></a></p>
+        </div>
+    </footer>
+    <!--Load FontAwesome kit-->
+    <script src="https://kit.fontawesome.com/ba33d00b7b.js" crossorigin="anonymous"></script>
+    <!--Bootstrap v5.3 JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous">
+    </script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
