add a missing closing tag </div> on card 3

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Website for tourists visiting Stockholm, helps you find places/attractions to visit with filter options and show you the weather for Stockholm">
+    <meta name="keywords" content="Visit Stockholm, tourist Stockholm, Stockholm, Tourist, Weather Stockholm, Weather">
     <title>Visit Stockholm</title>
     <!--Load Bootstrap v5.3-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
